--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -77,6 +77,7 @@ en:
       list: Groups
       group: Group
       name: Name
+      picture: Picture
       summary: Summary
       actions: Actions
       add: Add groups
