Community: groups deletion

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -81,6 +81,7 @@ en:
       summary: Summary
       actions: Actions
       add: Add groups
+      deleted: Group has been deleted
 
     activities:
       list: Activities
