--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -56,6 +56,7 @@ en:
     self-list: You are now on <b class="font-semibold">your</b> list
     user-list: "You are now on <b class=\"font-semibold\">%{name}'s</b> list"
     back: Back
+    save: Save
     continue: Continue
     community: Community
 
