Community: groups with relationships

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -36,6 +36,7 @@ en:
         - followship
         - membership
         - collaboration
+        - owner
     feed:
       title: Feed
     title: MVP Marketplace
