fix user's list

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -118,7 +118,7 @@ en:
     items:
       by_user: Browse this user's items
       self-list: You are now on <span class="font-semibold">your</span> list
-      user-list: You are now on <span class="font-semibold">%{name}'s</span> list (%{email})
+      user-list: You are now on <span class="font-semibold">%{name}'s</span> list (%{name})
       yours: User's items
       list: Items
       new: new item
