--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -108,6 +108,7 @@ en:
         profile_updated: updated profile information
         item_created: created a <a href="/items/%{object_id}">%{name}</a>
         comment_created: "posted a comment on <a href=\"%{url}\"> %{target} </a> page"
+        user_joined_group: "joined to <a href=\"%{url}\"> %{target} </a> group"
 
     users:
       new: new user
