--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -108,6 +108,7 @@ en:
       dashboard: Dashboard
       log-out: Log out
       chat: Chat
+      inbox: Inbox
     footer:
       description: >-
         MVP Marketplace template is modern marketplace to gather your clients
