Users items -> My items

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -136,7 +136,7 @@ en:
       by_user: Browse this user's items
       self-list: You are now on <span class="font-semibold">your</span> list
       user-list: You are now on <span class="font-semibold">%{name}'s</span> list (%{name})
-      yours: User's items
+      yours: My items
       list: Items
       new: new item
       created: Item created
