Fix tests after changes in sidebar

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -238,6 +238,8 @@ en:
       items-for-sell: Items for sell
       items-to-buy: Items to buy
       list-an-item: List an Item
+      buy-orders: Purchases
+      sell-orders: Sold
 
 
     profiles:
