Hero styling/copy

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -86,8 +86,8 @@ en:
       chat: Chat
 
     hero:
-      shop: Shop
-      sell: Sell
+      shop: Find your dream watch
+      sell: Sell part of your collection
       main-sentence: Find Your Time
       secondary-sentence: MVP Marketplace is a social marketplace to buy and sell all things
 
