fix join button

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -204,7 +204,7 @@ en:
         profile_updated: updated profile information
         item_created: created a <a href="/items/%{object_id}">%{name}</a>
         comment_created: "posted a comment on <a href=\"%{url}\"> %{target} </a> %{type} page"
-        user_joined_group: "joined to <a href=\"%{url}\"> %{target} </a> group"
+        user_joined_group: "joined <a href=\"%{url}\"> %{target} </a> group"
 
     users:
       new: new user
