--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -324,6 +324,8 @@ en:
       passwords:
         reset:
           subject: Reset Password
+      contact-us:
+        subject: 'New message from Contact-Us form on %{host}'
     credit_cards:
       name: Credit Cards
       no_cards: You don't have any cards connected
