--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -444,6 +444,7 @@ en:
           email: Email
           message: Message
           reason: Reason
+          submit: Send message
   lib:
     sort_options:
       relevance: Relevance
