--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -436,10 +436,8 @@ en:
         delete_failed: Delete failed
       contacts:
         contact-us: Contact Us
-        add: Add contact
-        edit: Edit contact
-        empty_state: You haven't added any contacts yet. <br> Create your first one now!
         message_sent: Message sent. We will contact with you shortly.
+        message-explain: Please explain your message in detail so that we may help you as best as possible in the shortest amount of time.
         form:
           email: Email
           message: Message
