--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -174,6 +174,8 @@ en:
       new_group: New Group
       edit: 'Edit Group: '
       empty_state: You haven’t added any groups yet. <br> Create your first one now!
+      join: Join
+      leave: Leave
       nav:
         activity: Activity
         about: About
