category sort in GraphQL, no longer in liquid

--- a/app/translations/en_categories.yml
+++ b/app/translations/en_categories.yml
@@ -1,6 +1,9 @@
 ---
 en:
   categories:
+    zordertest: Z order test
+    aordertest: A order test
+    aordertest/dupa: a Dupa
     jewellery: Jewellery
     jewellery/accessories: Accessories
     jewellery/accessories/brooches: Brooches
