--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -397,16 +397,18 @@ en:
       stripe_pk_key: Stripe Publishable Key
       stripe_sk_key: Stripe Secret Key
       stripe_client_id: Stripe Owner Connect Account client ID
-    item_statuses:
-      sold: sold
-      none: '&nbsp;'
-    order_statuses:
-      order_status: status
-      pending_payment: pending
-      placed: new
-      paid: paid
-      canceled: canceled
-      shipped: shipped
+    statuses:
+      orders:
+        pending_payment: pending
+        placed: new
+        paid: paid
+        canceled: canceled
+        shipped: shipped
+      items:
+        new: New
+        published: Published
+        unpublished: Unpublished
+        sold: Sold
     sessions:
       created: Logged in
       destroyed: Logged out
@@ -469,6 +471,18 @@ en:
         form:
           key: key
           uuid: uuid
+      statuses:
+        new: New status
+        add: Add status
+        edit: Edit status
+        empty_state: You haven't added any statuses yet. <br> Create your first one now!
+        form:
+          object_id: object_id
+          name: name
+          payload: payload
+          fullname: fullname
+          scope: scope
+          timestamp: timestamp
   lib:
     sort_options:
       relevance: Relevance
