--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -231,6 +231,7 @@ en:
         followers: Followers
         profile: Profile
     items:
+      all: All
       by_user: Browse this user's items
       self-list: You are now on <span class="font-semibold">your</span> list
       user-list: >-
