--- a/app/translations/en_test.yml
+++ b/app/translations/en_test.yml
@@ -3,7 +3,7 @@ en:
     should:
       be_false: should be false
       be_valid: should be valid
-      equal: should equal
+      equal: 'should equal, expected %{given} to equal %{expected}'
       match: match
       not:
         be_empty: should not be empty
