--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -447,7 +447,7 @@ en:
         section1:
           q1:
             question: How it works?
-            answer: Very simple
+            answer: Good and fast
           q2:
             question: How much it cost?
             answer: It's cheap
