Topics: style posts; add styles for markdown blocks
Topics: use comments to store questions

Add tags

Questions: accept answer

Questions: cache score for question

Questions: style

Questions: move from comments to posts

Posts: add admin pages

--- a/scaffold/generators/crud/templates/translations/model.yml
+++ b/scaffold/generators/crud/templates/translations/model.yml
@@ -5,5 +5,5 @@ model:
   empty_state: You haven't added any <%= modelNamePlural %> yet. <br> Create your first one now!
   form:
 <% attributes.forEach((attr) => { -%>
-    <%= attr.name %>: <%= attr.name %>
+    <%= attr.name %>: <%= attr.nameHuman %>
 <% }); -%>
