Added comments to code

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -334,6 +334,7 @@ en:
       send_message: Send message
       message_input_placeholder: Type your message here and press Enter to send
       blank_message: To start a conversation, find a person profile and use the ‘Send message’ button
+      loading_previous: Loading previous messages…
     item: Item
     your-items: Your items
     item_id: Item ID
