Added the breadcrumbs to style guide

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -1041,6 +1041,8 @@ en:
           tags: Tags
           upvotes: Upvotes
           downvotes: Downvotes
+    style_guide:
+      title: Style guide
   lib:
     sort_options:
       relevance: Relevance
