--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -98,6 +98,7 @@ en:
       reset: Reset
       anonymous: Don't have an account?
       password_lost: Password lost?
+
     order: Order
     your-orders: Your orders
     self-list: You are now on <b class="font-semibold">your</b> list
@@ -246,6 +247,7 @@ en:
         email: E-mail
         password: Password
         signup: Sign Up
+        agreed: I understand and agree to <a href="/terms-of-service">Terms of Service</a> and <a href="/privacy-policy">Privacy Policy</a>
       attr:
         id: ID
         created_at: Created at
@@ -947,6 +949,7 @@ en:
         item</span> has <span class="font-semibold">orders</span>. Editing is
         not allowed.
       denied: Permission denied
+      must_be_selected: Must be selected
     confirm-delete: Are you sure you want to delete this item?
     delete: Delete
     models:
